<resources>
    <string name="app_name">Firebase Chat</string>

    <string name="enter_message">Enter message</string>
    <string name="send">SEND</string>

    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="nick_name">NickName</string>
    <string name="google">Sign in with Google</string>
    <string name="twitter">Sign in with Twitter</string>

    <string name="signin">Sign In</string>
    <string name="next">Next</string>
    <string name="newAccount">Create New account</string>
    <string name="sign_out">Log out</string>
    <string name="change_nick">Change Nickname</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="authentication_failed_google">Google sign in failed.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="channel">Channels</string>
    <string name="channel_one">Channel 1</string>
    <string name="channel_two">Channel 2</string>
    <string name="error_validation_nickname">Invalid Nickname</string>
    <string name="error_validation_email">Invalid Email</string>
    <string name="error_validation_password">Invalid Password</string>
    <string name="id_banner">ca-app-pub-9814802398511227/1063637603</string>
    <string name="id_app">ca-app-pub-9814802398511227~4128359610</string>

</resources>
