<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:textColor="@color/white"
            tools:text="@string/app_name"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"/>

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/login" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="30dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorGoogle"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/signin"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:background="@color/colorGoogle"
            android:textColor="@color/white"
            android:text="@string/newAccount"/>

        <View android:background="@color/colorPrimaryDark"
            android:layout_width = "match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:id="@+id/btnGoogle"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_google" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:adjustViewBounds="true"
                android:layout_margin="1dp"
                android:src="@drawable/ic_google"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/google"
                tools:text="@string/google"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnTwitter"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:background="@drawable/rectangle_twitter"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_twitter"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/twitter"
                tools:text="@string/twitter"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>